@@ -1,5 +1,12 @@
 2004-01-03  Mark Kettenis  <kettenis@gnu.org>
 
+	* sparc-tdep.c (sparc32_return_value): New function.
+	 (sparc32_use_struct_convention, sparc32_return_value_on_stack):
+	Remove functions.
+	(sparc32_gdbarch_init): Set return_value, don't set
+	extract_return_value, store_return_value, use_struct_convention
+	and return_value_on_stack.
+
 	* sparc-sol2-nat.c: Add missing ')'.
 
 2004-01-03  J. Brobecker  <brobecker@gnat.com>
